(fix): Removed figure tag on header and wrap language button and login image with div

--- a/ts/src/app/components/page-header/page-header.component.scss
+++ b/ts/src/app/components/page-header/page-header.component.scss
@@ -1,9 +1,6 @@
 .page-header {
     width: calc(99vw - 13.72rem);
-    margin-left: 13.72rem;
-    top: 0;
     height: 4.2rem;
-    position: absolute;
     background-color: #FDF1EB;
     display: flex;
     align-items: center;
@@ -41,5 +38,11 @@
         margin-right: 2.25rem;
         margin-left: -15rem;
         cursor: pointer;
+    }
+
+    .images-wrapper {
+       display: flex;
+       justify-content: space-between;
+       width: 23rem;
     }
 }
